src/objects/c2g__codaCurrencyRevaluation__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpcurrencyrevaluation</customHelpPage>
    <description>Stores the master details related to a currency revaluation.</description>
    <fields>
        <fullName>c2g__Analysis__c</fullName>
        <label>Analysis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Detail Level</fullName>
                </value>
                <value>
                    <fullName>Summary Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__BreakdownByStandardAnalysisFields__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked your transaction line items for the gains and losses GLA will be broken down by standard analysis fields (Account, Product, Bank Account, Tax Code).</description>
        <label>Standard Breakdown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__BreakdownBySubAnalysisFields__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked your revaluation summary and transaction line items for the gains and losses GLA will be broken down by custom sub-analysis fields.</description>
        <label>Sub-Analysis Breakdown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CancelPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cancel Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Currency Revaluations (Cancel Period)</relationshipLabel>
        <relationshipName>CurrencyRevaluations4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CancellationReason__c</fullName>
        <label>Cancellation Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Currency Revaluations</relationshipLabel>
        <relationshipName>CurrencyRevaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Currency Revaluations</relationshipLabel>
        <relationshipName>CurrencyRevaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Currency Revaluations</relationshipLabel>
        <relationshipName>CurrencyRevaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DimensionalAnalysis__c</fullName>
        <label>Dimensional Analysis On Lines</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Copy from Source</fullName>
                </value>
                <value>
                    <fullName>Enter Dimensions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__DiscardReason__c</fullName>
        <label>Discard Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Currency Revaluations</relationshipLabel>
        <relationshipName>CurrencyRevaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentDescription__c</fullName>
        <label>Document Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentReference__c</fullName>
        <label>Document Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DualExchangeRate__c</fullName>
        <label>Dual Exchange Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DualValue__c</fullName>
        <label>Dual Value</label>
        <summarizedField>c2g__codaCurrencyRevaluationSummary__c.c2g__DualValue__c</summarizedField>
        <summaryForeignKey>c2g__codaCurrencyRevaluationSummary__c.c2g__CurrencyRevaluation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__ErrorListView__c</fullName>
        <label>Error</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>c2g__ErrorText__c</fullName>
        <label>Error Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__ExcludeCRVTransactions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude CRV Transactions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ExcludeRevaluedLines__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should previously revalued lines be excluded from selection by this revaluation or should they cause the revaluation to fail?</description>
        <label>Exclude Revalued Lines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__GroupDisplayName__c</fullName>
        <description>The currency revaluation group display name.</description>
        <formula>c2g__RevalGroup__r.c2g__DisplayName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__HomeExchangeRate__c</fullName>
        <label>Document Exchange Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HomeValue__c</fullName>
        <label>Home Value</label>
        <summarizedField>c2g__codaCurrencyRevaluationSummary__c.c2g__HomeValue__c</summarizedField>
        <summaryForeignKey>c2g__codaCurrencyRevaluationSummary__c.c2g__CurrencyRevaluation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__Locks__c</fullName>
        <description>The locking object ID used to protect updates to the owning currency revaluation field on Transaction lines.</description>
        <label>Locks</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Currency Revaluations</relationshipLabel>
        <relationshipName>CurrencyRevaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PeriodFrom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Period From</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Currency Revaluations</relationshipLabel>
        <relationshipName>CurrencyRevaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PeriodTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Period To</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Currency Revaluations (Period To)</relationshipLabel>
        <relationshipName>CurrencyRevaluations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PostingPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Posting Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Currency Revaluations (Posting Period)</relationshipLabel>
        <relationshipName>CurrencyRevaluations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__RevalGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Our currency revaluation group.</description>
        <label>Group</label>
        <referenceTo>c2g__codaCurrencyRevaluationGroup__c</referenceTo>
        <relationshipLabel>Group Members</relationshipLabel>
        <relationshipName>RevalGroupMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__RevaluationType__c</fullName>
        <label>Revaluation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Balance Sheet</fullName>
                </value>
                <value>
                    <fullName>Income Statement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__ReversalPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reversal Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Currency Revaluations (Reversal Period)</relationshipLabel>
        <relationshipName>CurrencyRevaluations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ScheduledTime__c</fullName>
        <formula>c2g__RevalGroup__r.c2g__ScheduledTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>c2g__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Generating</fullName>
                </value>
                <value>
                    <fullName>Generation Error</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Posting</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Posting Error</fullName>
                </value>
                <value>
                    <fullName>Discarded</fullName>
                </value>
                <value>
                    <fullName>Discarding</fullName>
                </value>
                <value>
                    <fullName>Canceling</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Canceling Error</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__UnrealizedGainsLossesGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unrealized Gains/Losses GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Currency Revaluations</relationshipLabel>
        <relationshipName>CurrencyRevaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Currency Revaluation</label>
    <listViews>
        <fullName>FF_100_Bruntwood_Management_Services_L_codaCurrencyRevaluation</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 100 - Bruntwood Management Services L</label>
        <queue>FF_100_Bruntwood_Management_Services_L</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_106_Bruntwood_Management_Services_3_codaCurrencyRevaluation</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 106 - Bruntwood Management Services(3</label>
        <queue>FF_106_Bruntwood_Management_Services_3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_110_Manchester_Science_Partnerships_codaCurrencyRevaluation</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 110 - Manchester Science Partnerships</label>
        <queue>FF_110_Manchester_Science_Partnerships</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_112_Mi_IDEA_Limited_codaCurrencyRevaluation</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 112 - Mi-IDEA Limited</label>
        <queue>FF_112_Mi_IDEA_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_113_Citylabs_2_0_Limited_codaCurrencyRevaluation</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 113 - Citylabs 2.0 Limited</label>
        <queue>FF_113_Citylabs_2_0_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_115_Manchester_Technopark_Ltd_codaCurrencyRevaluation</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 115 - Manchester Technopark Ltd</label>
        <queue>FF_115_Manchester_Technopark_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_125_Salford_Innovation_Park_Ltd_codaCurrencyRevaluation</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 125 - Salford Innovation Park Ltd</label>
        <queue>FF_125_Salford_Innovation_Park_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_130_Principal_Agent_Management_Ltd_codaCurrencyRevaluation</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 130 - Principal Agent Management Ltd</label>
        <queue>FF_130_Principal_Agent_Management_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_135_Alderley_Park_Holdings_Ltd_codaCurrencyRevaluation</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 135 - Alderley Park Holdings Ltd</label>
        <queue>FF_135_Alderley_Park_Holdings_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_139_Alderley_Imaging_Limited_codaCurrencyRevaluation</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 139 - Alderley Imaging Limited</label>
        <queue>FF_139_Alderley_Imaging_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_140_Alderley_Park_Limited_codaCurrencyRevaluation</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 140 - Alderley Park Limited</label>
        <queue>FF_140_Alderley_Park_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_141_Circle_Square_District_Holdings_codaCurrencyRevaluation</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 141 - Circle Square District Holdings</label>
        <queue>FF_141_Circle_Square_District_Holdings</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_142_Circle_Square_District_Company_codaCurrencyRevaluation</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 142 - Circle Square District Company</label>
        <queue>FF_142_Circle_Square_District_Company</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_143_Circle_Square_Green_Company_Ltd_codaCurrencyRevaluation</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 143 - Circle Square Green Company Ltd</label>
        <queue>FF_143_Circle_Square_Green_Company_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_144_Bruntwood_Circle_Square_2_Limit_codaCurrencyRevaluation</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 144 - Bruntwood Circle Square 2 Limit</label>
        <queue>FF_144_Bruntwood_Circle_Square_2_Limit</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CRV{000000}</displayFormat>
        <label>Currency Revaluation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Currency Revaluations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>